--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/MagicalBridge/webpack4.0/issues"
   },
-  "homepage": "https://github.com/MagicalBridge/webpack4.0#readme"
+  "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
+  "devDependencies": {
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
+  }
 }
