--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is webpack4.0 learning git",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
