--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
+    "file-loader": "^3.0.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   }
