--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
     "file-loader": "^3.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   }
