--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
     "autoprefixer": "^9.5.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.20.1",
