--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is webpack4.0 learning git",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "start": "webpack-dev-server"
   },
   "repository": {
