--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "middleware": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "autoprefixer": "^9.5.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
+    "express": "^4.17.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
@@ -32,6 +34,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.5.0"
   }
 }
