--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is webpack4.0 learning git",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "file-loader": "^3.0.1",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
