--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^4.5.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.11.0"
