--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
   },
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
+    "css-loader": "^5.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2"
   }
 }
