--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/MagicalBridge/webpack4.0#readme",
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "css-loader": "^5.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.1.0",
+    "postcss-loader": "^4.0.4",
     "style-loader": "^2.0.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
